--- a/DetrasDeCamaras.html
+++ b/DetrasDeCamaras.html
@@ -21,10 +21,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">INICIO</a></li>
-                    <li><a href="menu2.html">PERSONAJES</a></li>
+                    <li><a href="Inicio.html">INICIO</a></li>
+                    <li><a href="Personajes.html">PERSONAJES</a></li>
+                    <li><a href="Equipo.html">EQUIPO</a></li>
                     <li><a href="#">DETRÁS DE CÁMARAS</a></li>
-                    <li><a href="menu4.html">EQUIPO</a></li>
                 </ul>
             </nav>
         </div>
@@ -54,7 +54,7 @@
             <div style="text-align: center; background-color: #FFE65B; border-top: 50px solid aliceblue;">
                 <img style="height: 700px; padding: 50px 0px;" src="imagenes/detras/dc5.jpeg" alt="">
             </div>
-            <div style="text-align: center; background-color: #FFE65B; border-top: 50px solid aliceblue; border-bottom: 70px solid aliceblue;">
+            <div style="text-align: center; background-color: #FFE65B; border-top: 50px solid aliceblue; border-bottom: 50px solid aliceblue;">
                 <img style="height: 700px; padding: 50px 0px;" src="imagenes/detras/dc4.jpg" alt="">
                 <h4>UN DETRÁS DE CÁMARAS QUE MUESTRA COMO ESTE DOCUMENTAL ES UN TRABAJO EN EQUIPO</h4>
                 <h4 style="margin: 0; padding-bottom: 50px;">GRACIAS POR ACOMPAÑARNOS EN ESTE PROCESO</h4>
