--- a/Inicio.html
+++ b/Inicio.html
@@ -22,9 +22,9 @@
             <nav>
                 <ul>
                     <li><a href="#">INICIO</a></li>
-                    <li><a href="menu2.html">PERSONAJES</a></li>
-                    <li><a href="menu3.html">DETRÁS DE CÁMARAS</a></li>
-                    <li><a href="menu4.html">EQUIPO</a></li>
+                    <li><a href="Personajes.html">PERSONAJES</a></li>
+                    <li><a href="Equipo.html">EQUIPO</a></li>
+                    <li><a href="DetrasDeCamaras.html">DETRÁS DE CÁMARAS</a></li>
                 </ul>
             </nav>
         </div>
