--- a/Personajes.html
+++ b/Personajes.html
@@ -21,10 +21,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">INICIO</a></li>
+                    <li><a href="Inicio.html">INICIO</a></li>
                     <li><a href="#">PERSONAJES</a></li>
-                    <li><a href="menu3.html">DETRÁS DE CÁMARAS</a></li>
-                    <li><a href="menu4.html">EQUIPO</a></li>
+                    <li><a href="Equipo.html">EQUIPO</a></li>
+                    <li><a href="DetrasDeCamaras.html">DETRÁS DE CÁMARAS</a></li>
                 </ul>
             </nav>
         </div>
@@ -116,6 +116,9 @@
                     "El Estado les quitó tantas cosas, el COVID les quitó tantas cosas, que era horrible. Ellos se sintieron arrebatados por eso y nunca pudieron ser escuchados"
                 </p>
             </div>
+        </section>
+        <section style="border-top: 50px solid #FFE65B;">
+            <img width="100%" src="imagenes/personajes/familia.jpeg" alt="">
         </section>
     </main>
     <footer>
