--- a/Inicio.html
+++ b/Inicio.html
@@ -38,7 +38,7 @@
         </div>
         <div class="section-sinopsis">
             <p>
-                Desayuno de casa es un documental que trata sobre la resiliencia que tuve que enfrentar una familia a través de las diferentes crisis, 
+                Desayuno de casa es un documental que trata sobre la resiliencia que tuvo que enfrentar una familia a través de las diferentes crisis, 
                 tras tres años de lo ocurrido, con altos y bajos, nos relatan sus vivencias después de un cambio radical en la venta ambulatoria. 
                 Se enfoca principalmente en cómo tuvieron una actitud de resistencia ante las adversidades, juntando su apoyo y amor familiar.
             </p>
