--- a/Equipo.html
+++ b/Equipo.html
@@ -66,6 +66,12 @@
             <div style="width: 50%; padding: 0 15px;">
                 <h2><strong>FRANK VILCHEZ</strong></h2>
                 <h4>Director de Fotografía y Cámara</h4>
+                <p>
+                    Nacido en Lima. Estudiante de Comunicaciones Corporativas en la Universidad Privada Del Norte. 
+                    Competencias: Proactividad con el trabajo en equipo, el liderazgo, comunicación efectiva, compromiso, autoconfianza, 
+                    empatía, resolución de problemas, ética y responsabilidad social. Asimismo, buscando siempre el buen y creativo ambiente 7
+                    para con mis compañeros.
+                </p>
             </div>
         </section>
         <section class="section_cris" style="display: flex; justify-content: space-between; align-items: center; border-top: 50px solid #FFE65B; background-color: aliceblue;">
