--- a/Inicio.html
+++ b/Inicio.html
@@ -38,7 +38,7 @@
         </div>
         <div class="section-sinopsis">
             <p>
-                Desayuno de casa es un documental que trata sobre la resiliencia que tuvo que enfrentar una familia a través de las diferentes crisis, 
+                "Desayuno de Casa" es un documental que trata sobre la resiliencia que tuvo que enfrentar una familia a través de las diferentes crisis, 
                 tras tres años de lo ocurrido, con altos y bajos, nos relatan sus vivencias después de un cambio radical en la venta ambulatoria. 
                 Se enfoca principalmente en cómo tuvieron una actitud de resistencia ante las adversidades, juntando su apoyo y amor familiar.
             </p>
@@ -54,12 +54,12 @@
             </p>
         </div>
         <div class="section-imagen2">
-            <img width="100%" src="imagenes/inicio/familia.jpeg">
+            <img width="100%" src="imagenes/inicio/tereza.jpeg">
         </div>
         <div class="section-creditos">
             <p>
                 DIRECCION Y REALIZACIÓN - ANDREA OCHOA / PRODUCCIÓN - SANDRA ALEJOS / SONIDO DIRECTO - ALESSANDRA RIVERA / 
-                DIRECTOR DE FOTOGRAFÍA Y CAMARÁ / FRANK VILCHEZ DIRECCIÓN DE ARTE / CRISTINA CARDENAS
+                DIRECTOR DE FOTOGRAFÍA Y CAMARÁ - FRANK VILCHEZ / DIRECCIÓN DE ARTE - CRISTINA CARDENAS
             </p>
         </div>
     </main>
