--- a/Personajes.html
+++ b/Personajes.html
@@ -55,6 +55,8 @@
                 <h4>CITAS</h4>
                 <p>
                     "Darle una educación a mis hijas, por lo menos para las que ellas más adelante, ellas se puedan defender, tengan su profesión, ellas son mi motivo para yo este luchar día a día"
+                </p>
+                <p>
                     "En ese momento pierdes lo que es la vergüenza, el miedo, el temor, se pierde"
                 </p>
             </div>      
@@ -84,6 +86,8 @@
                 <h4>CITAS</h4>
                 <p>
                     "La pérdida de mi papá, la pérdida de mis hermanos por la enfermedad, y ha sido muy complicado"
+                </p>
+                <p>
                     "La fortaleza de… de mi familia en general, de mi esposa, de mis hijas, que… me dieron mucha fuerza en aquel momento. Em… Eso… eso lo valoro bastante"
                 </p>
             </div>
@@ -108,11 +112,13 @@
                 </p>
                 <h4>ASPIRACIONES</h4>
                 <p>
-                    Poder culminar su educación universitaria para así sacar a su familia adelante, devolviendo el sacrificio de sus padres
+                    Poder culminar su educación universitaria para así sacar a su familia adelante, devolviendo el sacrificio de sus padres.
                 </p>
                 <h4>CITAS</h4>
                 <p>
                     "Él había sido ese pilar que durante toda mi vida había estado y yo no quería perderlo. Me reusaba hacerlo"
+                </p>
+                <p>
                     "El Estado les quitó tantas cosas, el COVID les quitó tantas cosas, que era horrible. Ellos se sintieron arrebatados por eso y nunca pudieron ser escuchados"
                 </p>
             </div>
