--- a/Equipo.html
+++ b/Equipo.html
@@ -16,7 +16,7 @@
         <div class="header-fondo">
             <div>
                 <h3>
-                    DESAYUNO DE CASA
+                    UN GIRO DE 180 GRADOS
                 </h3>
             </div>
             <nav>
@@ -69,8 +69,7 @@
                 <p>
                     Nacido en Lima. Estudiante de Comunicaciones Corporativas en la Universidad Privada Del Norte. 
                     Competencias: Proactividad con el trabajo en equipo, el liderazgo, comunicación efectiva, compromiso, autoconfianza, 
-                    empatía, resolución de problemas, ética y responsabilidad social. Asimismo, buscando siempre el buen y creativo ambiente 7
-                    para con mis compañeros.
+                    empatía, resolución de problemas, ética y responsabilidad social. Asimismo, buscando siempre el buen y creativo ambiente para mis compañeros.
                 </p>
             </div>
         </section>
