--- a/Inicio.html
+++ b/Inicio.html
@@ -34,9 +34,7 @@
             <h1>
                 <strong>UN GIRO DE 180 GRADOS</strong>
             </h1>
-            <iframe width="942" height="530" src="https://www.youtube.com/embed/zw80_s1H1Hg" title="UN GIRO DE 180° - UPN" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        </div>
-        <div class="section-sinopsis">
-            <p>
+            <iframe width="707" height="530" src="https://www.youtube.com/embed/crmrp2iFvMY" title="180° - TRAILER" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            <p>
                 "Un Giro de 180 Grados" es un documental que trata sobre la resiliencia que tuvo que enfrentar una familia a través de las diferentes crisis, 
                 tras tres años de lo ocurrido, con altos y bajos, nos relatan sus vivencias después de un cambio radical en la venta ambulatoria. 
                 Se enfoca principalmente en cómo tuvieron una actitud de resistencia ante las adversidades, juntando su apoyo y amor familiar.
