--- a/Inicio.html
+++ b/Inicio.html
@@ -16,7 +16,7 @@
         <div class="header-fondo">
             <div>
                 <h3>
-                    UN GIRO DE 180 GRADOS
+                    180 GRADOS
                 </h3>
             </div>
             <nav>
@@ -32,14 +32,14 @@
     <main>
         <div class="section-video">
             <h1>
-                <strong>UN GIRO DE 180 GRADOS</strong>
+                <strong>180 GRADOS</strong>
             </h1>
             <h2>
                 Presione la imágen para visualizar el video
             </h2>
             <a href="https://www.youtube.com/watch?v=wk5NO5bHgxs&t=213s"><img style="height: 520px; padding-bottom: 20px;" src="intro.jpg" /></a>    
             <p>
-                "Un Giro de 180 Grados" es un documental que trata sobre la resiliencia que tuvo que enfrentar una familia a través de las diferentes crisis, 
+                "180 Grados" es un documental que trata sobre la resiliencia que tuvo que enfrentar una familia a través de las diferentes crisis, 
                 tras tres años de lo ocurrido, con altos y bajos, nos relatan sus vivencias después de un cambio radical en la venta ambulatoria. 
                 Se enfoca principalmente en cómo tuvieron una actitud de resistencia ante las adversidades, juntando su apoyo y amor familiar.
             </p>
