--- a/Equipo.html
+++ b/Equipo.html
@@ -16,7 +16,7 @@
         <div class="header-fondo">
             <div>
                 <h3>
-                    UN GIRO DE 180 GRADOS
+                    180 GRADOS
                 </h3>
             </div>
             <nav>
